@@ -206,6 +206,7 @@ Chronological list of authors
   - Christian Pfaendner
   - Pratham Chauhan
   - Meet Brijwani
+  - Vishal Parmar
 
 
 External code
